--- a/Energy.App.Standalone/wwwroot/index.html
+++ b/Energy.App.Standalone/wwwroot/index.html
@@ -36,7 +36,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_framework/aspnetcore-browser-refresh.js"></script>
-    <script src="_content/Fluxor.Blazor.Web/scripts/index.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
 </body>
 
