Fixes and chart start

--- a/Energy.App.Standalone/wwwroot/index.html
+++ b/Energy.App.Standalone/wwwroot/index.html
@@ -39,6 +39,8 @@
     <script src="_framework/aspnetcore-browser-refresh.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
+    <script src="js/bundle.js"></script>
+    
 </body>
 
 </html>
