--- a/Energy.App.Standalone/wwwroot/index.html
+++ b/Energy.App.Standalone/wwwroot/index.html
@@ -37,8 +37,8 @@
     <script src="_framework/blazor.webassembly.js"></script>
 
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
-    <script src="js/bundle.js"></script>
+    
+    <script type="text/javascript" src="js/bundle.min.js"></script>
     
 </body>
 
