Extra nav links & styling

--- a/Energy.App.Standalone/wwwroot/index.html
+++ b/Energy.App.Standalone/wwwroot/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="robots" content="noindex">
+    <meta property='og:title' content='Explain My Energy' />
+    <meta property='og:image' content='//explain-my-energy.co.uk/images/DecemberWeather.png' />
+    <meta property='og:description' content='Understand your energy consumption and how Weather changes and Tariff increases will affect your bills' />
+    <meta property='og:url' content='//explain-my-energy.co.uk/' />
+
     <title>Explain My Energy</title>
 
     <base href="/" />
