--- a/Energy.App.Standalone/wwwroot/index.html
+++ b/Energy.App.Standalone/wwwroot/index.html
@@ -14,7 +14,11 @@
 
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/fontawesome/css/brands.min.css">
+    <link rel="stylesheet" href="css/fontawesome/css/solid.min.css">
+
+
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
