--- a/Energy.App.Standalone/wwwroot/AttributionsAndLicense.html
+++ b/Energy.App.Standalone/wwwroot/AttributionsAndLicense.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<head>
+    <link rel="stylesheet" href="css/attribs.css">
+</head>
 <div class="eme--license-attribution-header--root">
     <h1>License &amp; Attributions</h1>
     <p>This file contains:</p>
